--- a/index.ipynb
+++ b/index.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,9 +52,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'name': 'Fork & Fig',\n",
+       "  'price': '$$',\n",
+       "  'is_closed': False,\n",
+       "  'review_count': 610},\n",
+       " {'name': 'Salt And Board',\n",
+       "  'price': '$$',\n",
+       "  'is_closed': False,\n",
+       "  'review_count': 11},\n",
+       " {'name': 'Frontier Restaurant',\n",
+       "  'price': '$',\n",
+       "  'is_closed': False,\n",
+       "  'review_count': 1373},\n",
+       " {'name': 'Nexus Brewery',\n",
+       "  'price': '$$',\n",
+       "  'is_closed': False,\n",
+       "  'review_count': 680},\n",
+       " {'name': \"Devon's Pop Smoke\",\n",
+       "  'price': '$$',\n",
+       "  'is_closed': False,\n",
+       "  'review_count': 54},\n",
+       " {'name': 'Cocina Azul',\n",
+       "  'price': '$$',\n",
+       "  'is_closed': True,\n",
+       "  'review_count': 647},\n",
+       " {'name': 'Philly Steaks',\n",
+       "  'price': '$$',\n",
+       "  'is_closed': False,\n",
+       "  'review_count': 25},\n",
+       " {'name': 'Stripes Biscuit',\n",
+       "  'price': '$$',\n",
+       "  'is_closed': True,\n",
+       "  'review_count': 20}]"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "restaurants"
    ]
@@ -78,8 +120,41 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Fork & Fig',\n",
+       " 'Salt And Board',\n",
+       " 'Frontier Restaurant',\n",
+       " 'Nexus Brewery',\n",
+       " \"Devon's Pop Smoke\",\n",
+       " 'Cocina Azul',\n",
+       " 'Philly Steaks',\n",
+       " 'Stripes Biscuit']"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "names = None\n",
+    "def return_names(elements):\n",
+    "    altered = []\n",
+    "    for element in elements:\n",
+    "        altered.append(element['name'])\n",
+    "    return altered\n",
+    "\n",
+    "#names = return_names(restaurants)\n",
+    "names = list(map(lambda rest: rest['name'], restaurants))\n",
+    "\n",
     "names\n",
     "# ['Fork & Fig',\n",
     "#  'Salt And Board',\n",
@@ -100,11 +175,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[610, 11, 1373, 680, 54, 647, 25, 20]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "review_counts = None\n",
+    "review_counts = list(map(lambda rest: rest['review_count'], restaurants))\n",
     "review_counts # [610, 11, 1373, 680, 54, 647, 25, 20]"
    ]
   },
@@ -117,11 +203,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3420"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "total_reviews = None\n",
+    "total_reviews = sum(review_counts)\n",
     "total_reviews # 3420"
    ]
   },
@@ -134,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,9 +243,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'Fork & Fig', 'price': 2, 'is_closed': False, 'review_count': 610}"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "format_restaurant(restaurants[0]) # {'is_closed': False, 'name': 'Fork & Fig', 'price': 2, 'review_count': 610}"
    ]
@@ -162,21 +270,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
     "def format_restaurants(restaurants):\n",
-    "    pass"
+    "    return list(map(lambda rest: format_restaurant(rest), restaurants))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'name': 'Fork & Fig', 'price': 2, 'is_closed': False, 'review_count': 610},\n",
+       " {'name': 'Salt And Board',\n",
+       "  'price': 2,\n",
+       "  'is_closed': False,\n",
+       "  'review_count': 11},\n",
+       " {'name': 'Frontier Restaurant',\n",
+       "  'price': 1,\n",
+       "  'is_closed': False,\n",
+       "  'review_count': 1373},\n",
+       " {'name': 'Nexus Brewery',\n",
+       "  'price': 2,\n",
+       "  'is_closed': False,\n",
+       "  'review_count': 680},\n",
+       " {'name': \"Devon's Pop Smoke\",\n",
+       "  'price': 2,\n",
+       "  'is_closed': False,\n",
+       "  'review_count': 54},\n",
+       " {'name': 'Cocina Azul', 'price': 2, 'is_closed': True, 'review_count': 647},\n",
+       " {'name': 'Philly Steaks', 'price': 2, 'is_closed': False, 'review_count': 25},\n",
+       " {'name': 'Stripes Biscuit',\n",
+       "  'price': 2,\n",
+       "  'is_closed': True,\n",
+       "  'review_count': 20}]"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "format_restaurants(restaurants)\n",
     "\n",
@@ -223,19 +364,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    pass"
+    "    return list(filter(lambda rest: rest['is_closed'] == False, format_restaurants(restaurants)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'name': 'Fork & Fig', 'price': 2, 'is_closed': False, 'review_count': 610},\n",
+       " {'name': 'Salt And Board',\n",
+       "  'price': 2,\n",
+       "  'is_closed': False,\n",
+       "  'review_count': 11},\n",
+       " {'name': 'Frontier Restaurant',\n",
+       "  'price': 1,\n",
+       "  'is_closed': False,\n",
+       "  'review_count': 1373},\n",
+       " {'name': 'Nexus Brewery',\n",
+       "  'price': 2,\n",
+       "  'is_closed': False,\n",
+       "  'review_count': 680},\n",
+       " {'name': \"Devon's Pop Smoke\",\n",
+       "  'price': 2,\n",
+       "  'is_closed': False,\n",
+       "  'review_count': 54},\n",
+       " {'name': 'Philly Steaks', 'price': 2, 'is_closed': False, 'review_count': 25}]"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "open_restaurants(restaurants)\n",
     "\n",
@@ -268,21 +437,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
     "def cheapest_restaurants(restaurants):\n",
-    "    pass"
+    "    return list(filter(lambda rest: rest['price'] < 2, format_restaurants(restaurants)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'name': 'Frontier Restaurant',\n",
+       "  'price': 1,\n",
+       "  'is_closed': False,\n",
+       "  'review_count': 1373}]"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cheapest_restaurants(restaurants)\n",
     "\n",
@@ -301,19 +484,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
     "def sufficiently_reviewed_restaurants(restaurants):\n",
-    "    pass"
+    "    return list(filter(lambda rest: rest['review_count'] >= 100, format_restaurants(restaurants)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'name': 'Fork & Fig', 'price': 2, 'is_closed': False, 'review_count': 610},\n",
+       " {'name': 'Frontier Restaurant',\n",
+       "  'price': 1,\n",
+       "  'is_closed': False,\n",
+       "  'review_count': 1373},\n",
+       " {'name': 'Nexus Brewery',\n",
+       "  'price': 2,\n",
+       "  'is_closed': False,\n",
+       "  'review_count': 680},\n",
+       " {'name': 'Cocina Azul', 'price': 2, 'is_closed': True, 'review_count': 647}]"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sufficiently_reviewed_restaurants(restaurants)\n",
     "\n",
